--- a/packages/theme/styles/panel.scss
+++ b/packages/theme/styles/panel.scss
@@ -243,15 +243,16 @@
       
       &.float {
         position: absolute;
+        flex-direction: row;
         flex-shrink: 0;
         top: 0;
         left: 100%;
         width: var(--panel-aside-width);
-        min-width: 0;
-        max-width: var(--panel-aside-width);
         height: 100%;
+        min-width: 0;
+        min-height: 0;
         background-color: var(--theme-panel-color);
-        border-left: 1px solid var(--theme-divider-color);
+        // border-left: 1px solid var(--theme-divider-color);
         border-bottom-right-radius: .45rem;
         box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
         transition: box-shadow 150ms ease 0s, transform 150ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
